@@ -43,6 +43,9 @@ VERSION = 0.1
 # If you don't need CBLAS interface, please comment it in.
 # NO_CBLAS = 1
 
+# If you don't need LAPACK, please comment it in.
+# NO_LAPACK = 1
+
 # If you want to use legacy threaded Level 3 implementation.
 # USE_SIMPLE_THREADED_LEVEL3 = 1
 
